y.output
Terminals unused in grammar

    REAL


Grammar

    0 $accept: inicio $end

    1 inicio: exp

    2 exp: lvalue
    3    | NIL
    4    | ABREPAR expseq FECHAPAR
    5    | NUM
    6    | STRING
    7    | MENOS exp
    8    | ID ABREPAR args FECHAPAR
    9    | exp MAIS exp
   10    | exp MENOS exp
   11    | exp VEZES exp
   12    | exp DIVIDIR exp
   13    | exp IGUAL exp
   14    | exp DIFERENTE exp
   15    | exp MENOR exp
   16    | exp MAIOR exp
   17    | exp MENORIG exp
   18    | exp MAIORIG exp
   19    | exp E exp
   20    | exp OU exp
   21    | tid
   22    | lvalue ATRIBUI exp
   23    | IF exp THEN exp ELSE exp
   24    | IF exp THEN exp
   25    | WHILE exp DO exp
   26    | FOR ID ATRIBUI exp TO exp DO exp
   27    | BREAK
   28    | LET decs IN expseq END

   29 tid: ABRECHAV ID IGUAL exp idexps FECHACHAV
   30    | ABRECOL exp FECHACOL OF exp

   31 decs: dec decs
   32     | %empty

   33 dec: tydec
   34    | vardec
   35    | fundec

   36 tydec: TIPO ID IGUAL ty

   37 ty: ID
   38   | ABRECHAV ID DOISPONTOS typeid tyfields1 FECHACHAV
   39   | ARRAY OF ID

   40 tyfields: ID DOISPONTOS typeid tyfields1
   41         | %empty

   42 tyfields1: VIRG ID DOISPONTOS typeid tyfields1
   43          | %empty

   44 vardec: VAR ID ATRIBUI exp
   45       | VAR ID DOISPONTOS typeid ATRIBUI exp

   46 fundec: FUNCTION ID ABREPAR tyfields FECHAPAR IGUAL exp
   47       | FUNCTION ID ABREPAR tyfields FECHAPAR DOISPONTOS typeid IGUAL exp

   48 lvalue: ID
   49       | lvalue PONTO ID
   50       | lvalue ABRECOL exp FECHACOL

   51 typeid: ID

   52 expseq: exp expseq1
   53       | %empty

   54 expseq1: PONTOVIRG exp expseq1
   55        | %empty

   56 args: exp args1
   57     | %empty

   58 args1: VIRG exp args1
   59      | %empty

   60 idexps: VIRG ID IGUAL exp idexps
   61       | %empty


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    NUM <intVal> (258) 5
    NIL (259) 3
    ABREPAR (260) 4 8 46 47
    FECHAPAR (261) 4 8 46 47
    ABRECHAV (262) 29 38
    FECHACHAV (263) 29 38
    ABRECOL (264) 30 50
    FECHACOL (265) 30 50
    MENOS (266) 7 10
    MAIS (267) 9
    VEZES (268) 11
    DIVIDIR (269) 12
    IGUAL (270) 13 29 36 46 47 60
    DIFERENTE (271) 14
    MENOR (272) 15
    MENORIG (273) 17
    MAIOR (274) 16
    MAIORIG (275) 18
    E (276) 19
    OU (277) 20
    OF (278) 30 39
    ATRIBUI (279) 22 26 44 45
    IF (280) 23 24
    THEN (281) 23 24
    ELSE (282) 23
    WHILE (283) 25
    DO (284) 25 26
    FOR (285) 26
    TO (286) 26
    BREAK (287) 27
    LET (288) 28
    IN (289) 28
    END (290) 28
    TIPO (291) 36
    DOISPONTOS (292) 38 40 42 45 47
    VAR (293) 44 45
    FUNCTION (294) 46 47
    PONTO (295) 49
    PONTOVIRG (296) 54
    VIRG (297) 42 58 60
    ID (298) 8 26 29 36 37 38 39 40 42 44 45 46 47 48 49 51 60
    REAL (299)
    STRING (300) 6
    ARRAY (301) 39


Nonterminals, with rules where they appear

    $accept (47)
        on left: 0
    inicio (48)
        on left: 1
        on right: 0
    exp (49)
        on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28
        on right: 1 7 9 10 11 12 13 14 15 16 17 18 19 20 22 23 24 25 26 29 30 44 45 46 47 50 52 54 56 58 60
    tid (50)
        on left: 29 30
        on right: 21
    decs (51)
        on left: 31 32
        on right: 28 31
    dec (52)
        on left: 33 34 35
        on right: 31
    tydec (53)
        on left: 36
        on right: 33
    ty (54)
        on left: 37 38 39
        on right: 36
    tyfields (55)
        on left: 40 41
        on right: 46 47
    tyfields1 (56)
        on left: 42 43
        on right: 38 40 42
    vardec (57)
        on left: 44 45
        on right: 34
    fundec (58)
        on left: 46 47
        on right: 35
    lvalue (59)
        on left: 48 49 50
        on right: 2 22 49 50
    typeid (60)
        on left: 51
        on right: 38 40 42 45 47
    expseq (61)
        on left: 52 53
        on right: 4 28
    expseq1 (62)
        on left: 54 55
        on right: 52 54
    args (63)
        on left: 56 57
        on right: 8
    args1 (64)
        on left: 58 59
        on right: 56 58
    idexps (65)
        on left: 60 61
        on right: 29 60


State 0

    0 $accept: . inicio $end

    NUM       shift, and go to state 1
    NIL       shift, and go to state 2
    ABREPAR   shift, and go to state 3
    ABRECHAV  shift, and go to state 4
    ABRECOL   shift, and go to state 5
    MENOS     shift, and go to state 6
    IF        shift, and go to state 7
    WHILE     shift, and go to state 8
    FOR       shift, and go to state 9
    BREAK     shift, and go to state 10
    LET       shift, and go to state 11
    ID        shift, and go to state 12
    STRING    shift, and go to state 13

    inicio  go to state 14
    exp     go to state 15
    tid     go to state 16
    lvalue  go to state 17


State 1

    5 exp: NUM .

    $default  reduce using rule 5 (exp)


State 2

    3 exp: NIL .

    $default  reduce using rule 3 (exp)


State 3

    4 exp: ABREPAR . expseq FECHAPAR

    NUM       shift, and go to state 1
    NIL       shift, and go to state 2
    ABREPAR   shift, and go to state 3
    ABRECHAV  shift, and go to state 4
    ABRECOL   shift, and go to state 5
    MENOS     shift, and go to state 6
    IF        shift, and go to state 7
    WHILE     shift, and go to state 8
    FOR       shift, and go to state 9
    BREAK     shift, and go to state 10
    LET       shift, and go to state 11
    ID        shift, and go to state 12
    STRING    shift, and go to state 13

    $default  reduce using rule 53 (expseq)

    exp     go to state 18
    tid     go to state 16
    lvalue  go to state 17
    expseq  go to state 19


State 4

   29 tid: ABRECHAV . ID IGUAL exp idexps FECHACHAV

    ID  shift, and go to state 20


State 5

   30 tid: ABRECOL . exp FECHACOL OF exp

    NUM       shift, and go to state 1
    NIL       shift, and go to state 2
    ABREPAR   shift, and go to state 3
    ABRECHAV  shift, and go to state 4
    ABRECOL   shift, and go to state 5
    MENOS     shift, and go to state 6
    IF        shift, and go to state 7
    WHILE     shift, and go to state 8
    FOR       shift, and go to state 9
    BREAK     shift, and go to state 10
    LET       shift, and go to state 11
    ID        shift, and go to state 12
    STRING    shift, and go to state 13

    exp     go to state 21
    tid     go to state 16
    lvalue  go to state 17


State 6

    7 exp: MENOS . exp

    NUM       shift, and go to state 1
    NIL       shift, and go to state 2
    ABREPAR   shift, and go to state 3
    ABRECHAV  shift, and go to state 4
    ABRECOL   shift, and go to state 5
    MENOS     shift, and go to state 6
    IF        shift, and go to state 7
    WHILE     shift, and go to state 8
    FOR       shift, and go to state 9
    BREAK     shift, and go to state 10
    LET       shift, and go to state 11
    ID        shift, and go to state 12
    STRING    shift, and go to state 13

    exp     go to state 22
    tid     go to state 16
    lvalue  go to state 17


State 7

   23 exp: IF . exp THEN exp ELSE exp
   24    | IF . exp THEN exp

    NUM       shift, and go to state 1
    NIL       shift, and go to state 2
    ABREPAR   shift, and go to state 3
    ABRECHAV  shift, and go to state 4
    ABRECOL   shift, and go to state 5
    MENOS     shift, and go to state 6
    IF        shift, and go to state 7
    WHILE     shift, and go to state 8
    FOR       shift, and go to state 9
    BREAK     shift, and go to state 10
    LET       shift, and go to state 11
    ID        shift, and go to state 12
    STRING    shift, and go to state 13

    exp     go to state 23
    tid     go to state 16
    lvalue  go to state 17


State 8

   25 exp: WHILE . exp DO exp

    NUM       shift, and go to state 1
    NIL       shift, and go to state 2
    ABREPAR   shift, and go to state 3
    ABRECHAV  shift, and go to state 4
    ABRECOL   shift, and go to state 5
    MENOS     shift, and go to state 6
    IF        shift, and go to state 7
    WHILE     shift, and go to state 8
    FOR       shift, and go to state 9
    BREAK     shift, and go to state 10
    LET       shift, and go to state 11
    ID        shift, and go to state 12
    STRING    shift, and go to state 13

    exp     go to state 24
    tid     go to state 16
    lvalue  go to state 17


State 9

   26 exp: FOR . ID ATRIBUI exp TO exp DO exp

    ID  shift, and go to state 25


State 10

   27 exp: BREAK .

    $default  reduce using rule 27 (exp)


State 11

   28 exp: LET . decs IN expseq END

    TIPO      shift, and go to state 26
    VAR       shift, and go to state 27
    FUNCTION  shift, and go to state 28

    $default  reduce using rule 32 (decs)

    decs    go to state 29
    dec     go to state 30
    tydec   go to state 31
    vardec  go to state 32
    fundec  go to state 33


State 12

    8 exp: ID . ABREPAR args FECHAPAR
   48 lvalue: ID .

    ABREPAR  shift, and go to state 34

    $default  reduce using rule 48 (lvalue)


State 13

    6 exp: STRING .

    $default  reduce using rule 6 (exp)


State 14

    0 $accept: inicio . $end

    $end  shift, and go to state 35


State 15

    1 inicio: exp .
    9 exp: exp . MAIS exp
   10    | exp . MENOS exp
   11    | exp . VEZES exp
   12    | exp . DIVIDIR exp
   13    | exp . IGUAL exp
   14    | exp . DIFERENTE exp
   15    | exp . MENOR exp
   16    | exp . MAIOR exp
   17    | exp . MENORIG exp
   18    | exp . MAIORIG exp
   19    | exp . E exp
   20    | exp . OU exp

    MENOS      shift, and go to state 36
    MAIS       shift, and go to state 37
    VEZES      shift, and go to state 38
    DIVIDIR    shift, and go to state 39
    IGUAL      shift, and go to state 40
    DIFERENTE  shift, and go to state 41
    MENOR      shift, and go to state 42
    MENORIG    shift, and go to state 43
    MAIOR      shift, and go to state 44
    MAIORIG    shift, and go to state 45
    E          shift, and go to state 46
    OU         shift, and go to state 47

    $default  reduce using rule 1 (inicio)


State 16

   21 exp: tid .

    $default  reduce using rule 21 (exp)


State 17

    2 exp: lvalue .
   22    | lvalue . ATRIBUI exp
   49 lvalue: lvalue . PONTO ID
   50       | lvalue . ABRECOL exp FECHACOL

    ABRECOL  shift, and go to state 48
    ATRIBUI  shift, and go to state 49
    PONTO    shift, and go to state 50

    $default  reduce using rule 2 (exp)


State 18

    9 exp: exp . MAIS exp
   10    | exp . MENOS exp
   11    | exp . VEZES exp
   12    | exp . DIVIDIR exp
   13    | exp . IGUAL exp
   14    | exp . DIFERENTE exp
   15    | exp . MENOR exp
   16    | exp . MAIOR exp
   17    | exp . MENORIG exp
   18    | exp . MAIORIG exp
   19    | exp . E exp
   20    | exp . OU exp
   52 expseq: exp . expseq1

    MENOS      shift, and go to state 36
    MAIS       shift, and go to state 37
    VEZES      shift, and go to state 38
    DIVIDIR    shift, and go to state 39
    IGUAL      shift, and go to state 40
    DIFERENTE  shift, and go to state 41
    MENOR      shift, and go to state 42
    MENORIG    shift, and go to state 43
    MAIOR      shift, and go to state 44
    MAIORIG    shift, and go to state 45
    E          shift, and go to state 46
    OU         shift, and go to state 47
    PONTOVIRG  shift, and go to state 51

    $default  reduce using rule 55 (expseq1)

    expseq1  go to state 52


State 19

    4 exp: ABREPAR expseq . FECHAPAR

    FECHAPAR  shift, and go to state 53


State 20

   29 tid: ABRECHAV ID . IGUAL exp idexps FECHACHAV

    IGUAL  shift, and go to state 54


State 21

    9 exp: exp . MAIS exp
   10    | exp . MENOS exp
   11    | exp . VEZES exp
   12    | exp . DIVIDIR exp
   13    | exp . IGUAL exp
   14    | exp . DIFERENTE exp
   15    | exp . MENOR exp
   16    | exp . MAIOR exp
   17    | exp . MENORIG exp
   18    | exp . MAIORIG exp
   19    | exp . E exp
   20    | exp . OU exp
   30 tid: ABRECOL exp . FECHACOL OF exp

    FECHACOL   shift, and go to state 55
    MENOS      shift, and go to state 36
    MAIS       shift, and go to state 37
    VEZES      shift, and go to state 38
    DIVIDIR    shift, and go to state 39
    IGUAL      shift, and go to state 40
    DIFERENTE  shift, and go to state 41
    MENOR      shift, and go to state 42
    MENORIG    shift, and go to state 43
    MAIOR      shift, and go to state 44
    MAIORIG    shift, and go to state 45
    E          shift, and go to state 46
    OU         shift, and go to state 47


State 22

    7 exp: MENOS exp .
    9    | exp . MAIS exp
   10    | exp . MENOS exp
   11    | exp . VEZES exp
   12    | exp . DIVIDIR exp
   13    | exp . IGUAL exp
   14    | exp . DIFERENTE exp
   15    | exp . MENOR exp
   16    | exp . MAIOR exp
   17    | exp . MENORIG exp
   18    | exp . MAIORIG exp
   19    | exp . E exp
   20    | exp . OU exp

    VEZES    shift, and go to state 38
    DIVIDIR  shift, and go to state 39

    $default  reduce using rule 7 (exp)


State 23

    9 exp: exp . MAIS exp
   10    | exp . MENOS exp
   11    | exp . VEZES exp
   12    | exp . DIVIDIR exp
   13    | exp . IGUAL exp
   14    | exp . DIFERENTE exp
   15    | exp . MENOR exp
   16    | exp . MAIOR exp
   17    | exp . MENORIG exp
   18    | exp . MAIORIG exp
   19    | exp . E exp
   20    | exp . OU exp
   23    | IF exp . THEN exp ELSE exp
   24    | IF exp . THEN exp

    MENOS      shift, and go to state 36
    MAIS       shift, and go to state 37
    VEZES      shift, and go to state 38
    DIVIDIR    shift, and go to state 39
    IGUAL      shift, and go to state 40
    DIFERENTE  shift, and go to state 41
    MENOR      shift, and go to state 42
    MENORIG    shift, and go to state 43
    MAIOR      shift, and go to state 44
    MAIORIG    shift, and go to state 45
    E          shift, and go to state 46
    OU         shift, and go to state 47
    THEN       shift, and go to state 56


State 24

    9 exp: exp . MAIS exp
   10    | exp . MENOS exp
   11    | exp . VEZES exp
   12    | exp . DIVIDIR exp
   13    | exp . IGUAL exp
   14    | exp . DIFERENTE exp
   15    | exp . MENOR exp
   16    | exp . MAIOR exp
   17    | exp . MENORIG exp
   18    | exp . MAIORIG exp
   19    | exp . E exp
   20    | exp . OU exp
   25    | WHILE exp . DO exp

    MENOS      shift, and go to state 36
    MAIS       shift, and go to state 37
    VEZES      shift, and go to state 38
    DIVIDIR    shift, and go to state 39
    IGUAL      shift, and go to state 40
    DIFERENTE  shift, and go to state 41
    MENOR      shift, and go to state 42
    MENORIG    shift, and go to state 43
    MAIOR      shift, and go to state 44
    MAIORIG    shift, and go to state 45
    E          shift, and go to state 46
    OU         shift, and go to state 47
    DO         shift, and go to state 57


State 25

   26 exp: FOR ID . ATRIBUI exp TO exp DO exp

    ATRIBUI  shift, and go to state 58


State 26

   36 tydec: TIPO . ID IGUAL ty

    ID  shift, and go to state 59


State 27

   44 vardec: VAR . ID ATRIBUI exp
   45       | VAR . ID DOISPONTOS typeid ATRIBUI exp

    ID  shift, and go to state 60


State 28

   46 fundec: FUNCTION . ID ABREPAR tyfields FECHAPAR IGUAL exp
   47       | FUNCTION . ID ABREPAR tyfields FECHAPAR DOISPONTOS typeid IGUAL exp

    ID  shift, and go to state 61


State 29

   28 exp: LET decs . IN expseq END

    IN  shift, and go to state 62


State 30

   31 decs: dec . decs

    TIPO      shift, and go to state 26
    VAR       shift, and go to state 27
    FUNCTION  shift, and go to state 28

    $default  reduce using rule 32 (decs)

    decs    go to state 63
    dec     go to state 30
    tydec   go to state 31
    vardec  go to state 32
    fundec  go to state 33


State 31

   33 dec: tydec .

    $default  reduce using rule 33 (dec)


State 32

   34 dec: vardec .

    $default  reduce using rule 34 (dec)


State 33

   35 dec: fundec .

    $default  reduce using rule 35 (dec)


State 34

    8 exp: ID ABREPAR . args FECHAPAR

    NUM       shift, and go to state 1
    NIL       shift, and go to state 2
    ABREPAR   shift, and go to state 3
    ABRECHAV  shift, and go to state 4
    ABRECOL   shift, and go to state 5
    MENOS     shift, and go to state 6
    IF        shift, and go to state 7
    WHILE     shift, and go to state 8
    FOR       shift, and go to state 9
    BREAK     shift, and go to state 10
    LET       shift, and go to state 11
    ID        shift, and go to state 12
    STRING    shift, and go to state 13

    $default  reduce using rule 57 (args)

    exp     go to state 64
    tid     go to state 16
    lvalue  go to state 17
    args    go to state 65


State 35

    0 $accept: inicio $end .

    $default  accept


State 36

   10 exp: exp MENOS . exp

    NUM       shift, and go to state 1
    NIL       shift, and go to state 2
    ABREPAR   shift, and go to state 3
    ABRECHAV  shift, and go to state 4
    ABRECOL   shift, and go to state 5
    MENOS     shift, and go to state 6
    IF        shift, and go to state 7
    WHILE     shift, and go to state 8
    FOR       shift, and go to state 9
    BREAK     shift, and go to state 10
    LET       shift, and go to state 11
    ID        shift, and go to state 12
    STRING    shift, and go to state 13

    exp     go to state 66
    tid     go to state 16
    lvalue  go to state 17


State 37

    9 exp: exp MAIS . exp
